packages/pond/src/snapshots/pond__tests__help_completions.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Generate shell completions.

Writes the completion script for the given shell to stdout.

Usage: pond completions [OPTIONS] <SHELL>

Arguments:
  <SHELL>
          [possible values: bash, elvish, fish, powershell, zsh]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config-file <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG_FILE]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Install:
  bash:  pond completions bash > ~/.local/share/bash-completion/completions/pond
  zsh:   pond completions zsh > "${fpath[1]}/_pond"
  fish:  pond completions fish > ~/.config/fish/completions/pond.fish
  pwsh:  pond completions powershell > _pond.ps1, then dot-source it from $PROFILE
         (needs an execution policy of RemoteSigned or looser)

Homebrew and nix packages ship these pre-installed, as does the Windows zip.
