packages/pond/src/snapshots/pond__tests__help_get-message.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Expand one message with its full part bodies.

Returns the message with its full parts (tool_call / tool_result / reasoning bodies included) plus conversational neighbors. For the whole session use `pond get-session`.

Usage: pond get-message [OPTIONS] <ID>

Arguments:
  <ID>
          Message id

Options:
      --namespace <NAMESPACE>
          Tenant namespace. The personal pond has exactly one; leave at the default
          
          [default: local]

      --context-before <CONTEXT_BEFORE>
          Conversational siblings before the target (grep -B)
          
          [default: 3]

      --context-after <CONTEXT_AFTER>
          Conversational siblings after the target (grep -A)
          
          [default: 3]

      --format <FORMAT>
          Output format: `text` (readable transcript) or `json` (one document)
          
          [default: text]
          [possible values: text, json]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config-file <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG_FILE]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond get-message <ID>
  pond get-message <ID> --context-before 5 --context-after 5
