packages/pond/src/snapshots/pond__tests__help_search.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Search stored messages.

`--mode fts` (default) matches exact whole words (BM25); `--mode vector` matches on meaning and needs `[embeddings].enabled`. Put the distinctive words you expect in the conversation in the query; scope with `--project`, `--from-date`, and friends instead.

Usage: pond search [OPTIONS] <QUERY>

Arguments:
  <QUERY>
          Free-text query: the distinctive words you expect in the conversation. Project names belong in `--project`

Options:
      --namespace <NAMESPACE>
          Tenant namespace. The personal pond has exactly one; leave at the default
          
          [default: local]

      --limit <LIMIT>
          Max sessions to return
          
          [default: 10]

      --mode <MODE>
          Retrieval arm: `fts` (default - exact whole words, BM25) or `vector` (matches on meaning). `vector` is available only when this instance has `[embeddings].enabled = true`; otherwise it is refused
          
          [possible values: fts, vector]

      --sort-by <SORT_BY>
          Result order: `relevance` (default) or `recency` (newest first)
          
          [possible values: relevance, recency]

      --project <PROJECT>
          Project filter: substring match by default.
          
          `--project pond` -> contains "pond". Prefix with `re:` for regex (`--project 're:^/Users/.*/x402'`); `lit:` escapes a literal value that would otherwise be parsed as a prefix.

      --session-id <ID>
          Filter to one session (exact match) - search within a single, possibly long, session

      --from-date <FROM_DATE>
          ISO date (YYYY-MM-DD) lower bound, inclusive

      --to-date <TO_DATE>
          ISO date (YYYY-MM-DD) upper bound, inclusive

      --explain
          Print Lance query plans instead of search results

      --format <FORMAT>
          Output format: `text` (readable transcript) or `json` (one document)
          
          [default: text]
          [possible values: text, json]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config-file <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG_FILE]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity

Examples:
  pond search "lance compaction tuning"
  pond search "auth retry" --project pond --limit 5
  pond search "merge_insert" --mode fts --sort-by recency
  pond search "migration plan" --from-date 2026-05-01 --format json
